--- a/client/i18n/ru.json
+++ b/client/i18n/ru.json
@@ -3,5 +3,6 @@
   "app.navigate.tools": "Инструменты",
   "app.navigate.login": "Войти",
   "app.navigate.about": "О проекте",
-  "app.test.hello-world": "И вам не хворать..."
+  "app.test.hello-world": "И вам не хворать...",
+  "app.home.welcome": "Приветствую {name}, у вас {unreadCount, number} {unreadCount, plural, one {письмо} other {писем}}"
 }
