--- a/client/i18n/en.json
+++ b/client/i18n/en.json
@@ -4,5 +4,7 @@
   "app.navigate.login": "Login",
   "app.navigate.about": "About",
   "app.test.hello-world": "Hello world",
-  "app.home.welcome": "Hello {name}, you have {unreadCount, number} {unreadCount, plural,  one {message} other {messages}}"
+  "app.home.welcome": "Hello {name}, you have {unreadCount, number} {unreadCount, plural,  one {message} other {messages}}",
+  "app.login.login": "Please Log In, or ",
+  "app.login.signin": "Sign Up"
 }
