--- a/client/i18n/en.json
+++ b/client/i18n/en.json
@@ -6,5 +6,6 @@
   "app.test.hello-world": "Hello world",
   "app.home.welcome": "Hello {name}, you have {unreadCount, number} {unreadCount, plural,  one {message} other {messages}}",
   "app.login.login": "Please Log In, or ",
-  "app.login.signin": "Sign Up"
+  "app.login.signin": "Sign Up",
+  "app.common.or": "or"
 }
