--- a/client/i18n/ru.json
+++ b/client/i18n/ru.json
@@ -5,6 +5,7 @@
   "app.navigate.about": "О проекте",
   "app.test.hello-world": "И вам не хворать...",
   "app.home.welcome": "Приветствую {name}, у вас {unreadCount, number} {unreadCount, plural, one {письмо} other {писем}}",
-  "app.login.login": "Войдите, или ",
-  "app.login.signin": "Зарегестрируйтесь"
+  "app.login.login": "Войдите",
+  "app.login.signin": "Зарегистрируйтесь",
+  "app.common.or": "или"
 }
